<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameOverActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameOverActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gameOverText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/game_over"
            android:textSize="30sp"
            android:gravity="bottom|center" />

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/score"
            android:textSize="24sp"
            android:gravity="top|center" />

        <Button
            android:id="@+id/register_score_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_score_button_text"
            android:layout_gravity="center"
            android:onClick="registerScore"/>
   </LinearLayout>

    <ListView
        android:id="@+id/scoresListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="15dp" />

</LinearLayout>